# temikfart

./: README.md
CV/: .gitignore  CMakeLists.txt  README.md  build.sh  custom-altacv.cls  cv-en.tex  cv-ru.tex  preamble.tex
